# pyccar3

./: .gitignore  README.md  pyproject.toml
examples/: example_ecca.py  example_graph_rrr.py  example_group_rrr.py  example_row_rrr.py
src/pyccar3/: __init__.py  _helper.py  cca_graph_rrr.py  cca_group_rrr.py  cca_rrr.py  ecca.py
tests/: test_functions.py  test_smoke.py
