[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyccar3"
version = "0.2.0"
description = "Group-sparse reduced-rank regression for CCA via ADMM (Python port of the R implementation)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Claire Donnat" }]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.21",
  "scipy>=1.8",
  "pandas>=1.3"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]